--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -32,5 +32,13 @@
     "phone": "Teléfono",
     "message": "Mensaje",
     "contact": "Contactar"
+  },
+  "contact_info": {
+    "get_budget": "Obtén una cotización",
+    "info_budget": "Cuéntanos sobre tu ptoyecto y obtén tu cotización.",
+    "step_one": "Completa el formulario de contacto.",
+    "step_two": "Ingresa tus datos para que podamos contactarte.",
+    "step_three": "En el campo de mensaje, cuéntanos sobre la idea que tienes para tu proyecto.",
+    "step_four": "Asegúrate de indicar datos como: Negocio, tipo de aplicación que necesitas: Web-movil y en cuánto tiempo esperarías recibir tu aplicación terminada."
   }
 }
