--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -40,5 +40,8 @@
     "step_two": "",
     "step_three": "",
     "step_four": ""
+  },
+  "members": {
+    "info": "The harry is the potter and the potter is the harry."
   }
 }
