--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,7 +8,9 @@
     "contact": "Get in touch"
   },
   "footer": {
-    "powered_by": "Powered by"
+    "powered_by": "Powered by",
+    "services": "Services",
+    "service_description": "Design and build web software"
   },
   "budget": {
     "budget_title": "Quote your web",
